--- a/assets/js/index.html
+++ b/assets/js/index.html
@@ -1,10 +1,52 @@
-<html>
+<!DOCTYPE html>
+<html lang="zh">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>403 Forbidden</title>
+    <link href="https://cdn.jsdelivr.net/gh/ouyangyanhuo/CDN@1.2/404/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/ouyangyanhuo/CDN@1.2/404/bootstrap-reset.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/ouyangyanhuo/CDN@1.2/404/font-awesome.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/gh/ouyangyanhuo/CDN@1.2/404/style.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/ouyangyanhuo/CDN@1.2/404/style-responsive.css" rel="stylesheet" />
+
 </head>
-<body>
-
-<p>Directory access is forbidden.</p>
-
-</body>
+<!--背景图片Stard-->
+<div style="
+    z-index: -3;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    min-height: 475px;
+    background-image: url(https://pic.downk.cc/item/5e22e9722fb38b8c3c5af064.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+"></div>
+<meta http-equiv="refresh" content="6;url=/">
+<!--背景图片End-->
+  <body class="body">
+    <div class="container">
+        <div class="col-sm-2">
+        </div>
+		<div class="col-sm-8" style="margin-top:35px">
+			<section class="panel">
+            <header class="panel-heading">
+            <center>
+			403 Forbidden
+			</center>
+            </header>
+            <div class="panel-body">
+			<div class="alert alert-info fade in">                                  <strong>Directory access is forbidden.</strong>
+            <br>
+            <center>
+            <strong>&copy; 2020 I'm a Gay</strong>
+            </center>
+            </div>
+            </div>
+            </section>
+    </div>
+     <div class="col-sm-2">
+     </div>
+    </div>
+  </body>
 </html>
